Assignment2_Zhao_Duo/tests/bad/ScientificNotationLittleBland.calc
a .0e b 1.e c 2.3e d 34.5e e 6.78e f 99.99e g 3e h 76e
.0e
1.e
2.3e
34.5e
6.78e
99.99e
3e
76e
a .0e b 1.e c 2.3e d 34.5e e 6.78e f 99.99e g 3e h 76e
.0e
1.e
2.3e
34.5e
6.78e
99.99e
3e
76e
